added lazy loading for images

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         images/hotel_room_320px.png 320w" sizes="100vw">
 
                     <img class="contentImg" src="images/hotel_room_1200px.png" alt="Hotel room" width="1200"
-                        height="800">
+                        height="800" loading="lazy">
                 </picture>
                 <figcaption>
                     An elegant hotel room combining comfort and refined style.
@@ -163,7 +163,7 @@
         images/hotel_toilet_320px.png 320w" sizes="100vw">
 
                     <img class="contentImg" src="images/hotel_toilet_1200px.png" alt="Modern bathrooms" width="1200"
-                        height="800">
+                        height="800" loading="lazy">
                 </picture>
                 <figcaption>
                     Elegant bathrooms designed for relaxation, sophistication, and pristine comfort.
@@ -197,7 +197,7 @@
         images/hotel_food_320px.png 320w" sizes="100vw">
 
                     <img class="contentImg" src="images/hotel_food_1200px.png" alt="Exquisite food" width="1200"
-                        height="800">
+                        height="800" loading="lazy">
                 </picture>
                 <figcaption>
                     Gourmet dishes crafted to delight the senses with every bite.
@@ -234,7 +234,7 @@
         images/hotel_spa_640px.png 640w,
         images/hotel_spa_320px.png 320w" sizes="100vw">
 
-                    <img class="contentImg" src="images/hotel_spa_1200px.png" alt="SPA area" width="1200" height="800">
+                    <img class="contentImg" src="images/hotel_spa_1200px.png" alt="SPA area" width="1200" height="800" loading="lazy">
                 </picture>
                 <figcaption>
                     A tranquil spa retreat designed for ultimate relaxation and renewal.
@@ -270,7 +270,7 @@
         images/hotel_gym_640px.png 640w,
         images/hotel_gym_320px.png 320w" sizes="100vw">
 
-                    <img class="contentImg" src="images/hotel_gym_1200px.png" alt="Hotel gym" width="1200" height="800">
+                    <img class="contentImg" src="images/hotel_gym_1200px.png" alt="Hotel gym" width="1200" height="800" loading="lazy">
                 </picture>
                 <figcaption>
                     A gym designed for peak performance, strength, and ultimate wellness.
@@ -306,7 +306,7 @@
         images/hotel_people_320px.png 320w" sizes="100vw">
 
                     <img class="contentImg" src="images/hotel_people_1200px.png" alt="Hotel service" width="1200"
-                        height="800">
+                        height="800" loading="lazy">
                 </picture>
                 <figcaption>
                     Exceptional service tailored to meet your every need with care and precision.
